--- a/.github/workflows/testing.yml
+++ b/.github/workflows/testing.yml
@@ -73,8 +73,17 @@ jobs:
 
           echo $NEW_TASK_DEF > new-task-def.json
 
-          # Register new task definition revision
-          aws ecs register-task-definition --cli-input-json file://new-task-def.json --region $AWS_REGION
-
-          # Update ECS service to use new task definition revision
-          aws ecs update-service --cluster $ECS_CLUSTER --service $ECS_SERVICE --force-new-deployment --region $AWS_REGION
+          # c. Register new task definition revision and get ARN
+          NEW_TASK_DEF_ARN=$(aws ecs register-task-definition \
+            --cli-input-json file://new-task-def.json \
+            --region $AWS_REGION \
+            --query 'taskDefinition.taskDefinitionArn' \
+            --output text)
+          
+          # d. Update ECS service to use the new task definition revision explicitly
+          aws ecs update-service \
+            --cluster $ECS_CLUSTER \
+            --service $ECS_SERVICE \
+            --task-definition $NEW_TASK_DEF_ARN \
+            --force-new-deployment \
+            --region $AWS_REGION
