--- a/.github/workflows/testing.yml
+++ b/.github/workflows/testing.yml
@@ -1,4 +1,4 @@
-name: Testing
+name: Testtt
 
 on:
   workflow_dispatch:
@@ -60,30 +60,36 @@ jobs:
           IMAGE_TAG=${{ needs.build-and-push.outputs.IMAGE_TAG }}
           IMAGE_URI=$ECR_REGISTRY/$IMAGE_NAME:$IMAGE_TAG
 
-          # Get current task definition
+          echo "Deploying image: $IMAGE_URI"
+
+          # 1️⃣ Get current task definition JSON
           TASK_DEF_JSON=$(aws ecs describe-task-definition \
             --task-definition $ECS_TASK_DEF \
             --region $AWS_REGION \
             --query 'taskDefinition' \
             --output json)
 
-          # Build new task definition JSON
+          # 2️⃣ Update container image and set executionRoleArn
           NEW_TASK_DEF=$(echo $TASK_DEF_JSON | jq --arg IMAGE "$IMAGE_URI" --arg EXEC_ROLE "$EXECUTION_ROLE_ARN" \
             '.containerDefinitions[0].image = $IMAGE | .executionRoleArn = $EXEC_ROLE | {family: .family, containerDefinitions: .containerDefinitions, executionRoleArn: .executionRoleArn, networkMode: .networkMode, requiresCompatibilities: .requiresCompatibilities, cpu: .cpu, memory: .memory}')
 
           echo $NEW_TASK_DEF > new-task-def.json
 
-          # c. Register new task definition revision and get ARN
+          # 3️⃣ Register new task definition revision and get the ARN
           NEW_TASK_DEF_ARN=$(aws ecs register-task-definition \
             --cli-input-json file://new-task-def.json \
             --region $AWS_REGION \
             --query 'taskDefinition.taskDefinitionArn' \
             --output text)
-          
-          # d. Update ECS service to use the new task definition revision explicitly
+
+          echo "Registered new task definition: $NEW_TASK_DEF_ARN"
+
+          # 4️⃣ Update ECS service to use the new task definition explicitly
           aws ecs update-service \
             --cluster $ECS_CLUSTER \
             --service $ECS_SERVICE \
             --task-definition $NEW_TASK_DEF_ARN \
             --force-new-deployment \
             --region $AWS_REGION
+
+          echo "ECS service updated successfully!"
