--- a/.github/workflows/testing.yml
+++ b/.github/workflows/testing.yml
@@ -28,6 +28,10 @@ jobs:
 
       - name: Login to Amazon ECR
         uses: aws-actions/amazon-ecr-login@v2
+        # run: |
+        #     aws ecr get-login-password --region us-east-1 |
+        #     docker login --username AWS --password-stdin ${{ secrets.ECR_REGISTRY }}
+
 
       - name: Build Docker image
         run: |
