--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -5,19 +5,15 @@ on:
 
 env:
   AWS_REGION: us-east-1
-  ECR_REGISTRY: ${{ secrets.ECR_REPOSITORY }}
+  ECR_REGISTRY: 084251039480.dkr.ecr.us-east-1.amazonaws.com
   IMAGE_NAME: sample_python_app
-  ECS_CLUSTER: Python-Sample-App-Cluster
-  ECS_SERVICE: Python-App-TD-service-o9rfe2cb
-  ECS_TASK_DEF: Python-App-TD
-  EXECUTION_ROLE_ARN: arn:aws:iam::084251039480:role/ecsTaskExecutionRole
+  ECS_CLUSTER: python-sample-app-cluster
+  ECS_SERVICE: python-sample-app-service
+  ECS_TASK_DEF: python-sample-app-task
 
 jobs:
   build-and-push:
     runs-on: ubuntu-latest
-
-    outputs:
-      IMAGE_TAG: ${{ steps.set-image-tag.outputs.IMAGE_TAG }}
 
     steps:
       - name: Checkout code
@@ -36,15 +32,14 @@ jobs:
         #     aws ecr get-login-password --region us-east-1 |
         #     docker login --username AWS --password-stdin ${{ secrets.ECR_REGISTRY }}
 
-      - name: Set image tag
-        id: set-image-tag
-        run: echo "IMAGE_TAG=${GITHUB_RUN_NUMBER}" >> $GITHUB_OUTPUT
 
       - name: Build Docker image
-        run: docker build -t $ECR_REGISTRY/$IMAGE_NAME:${GITHUB_RUN_NUMBER} .
+        run: |
+          docker build -t $ECR_REGISTRY/$IMAGE_NAME:${GITHUB_RUN_NUMBER} .
 
       - name: Push Docker image to ECR
-        run: docker push $ECR_REGISTRY/$IMAGE_NAME:${GITHUB_RUN_NUMBER}
+        run: |
+          docker push $ECR_REGISTRY/$IMAGE_NAME:${GITHUB_RUN_NUMBER}
 
   deploy-to-ecs:
     runs-on: ubuntu-latest
@@ -60,39 +55,37 @@ jobs:
 
       - name: Deploy to ECS
         run: |
-          IMAGE_TAG=${{ needs.build-and-push.outputs.IMAGE_TAG }}
-          IMAGE_URI=$ECR_REGISTRY/$IMAGE_NAME:$IMAGE_TAG
+          IMAGE_URI=$ECR_REGISTRY/$IMAGE_NAME:${GITHUB_RUN_NUMBER}
 
           echo "Deploying image: $IMAGE_URI"
 
-          # 1️⃣ Get current task definition JSON
           TASK_DEF_JSON=$(aws ecs describe-task-definition \
             --task-definition $ECS_TASK_DEF \
             --region $AWS_REGION \
             --query 'taskDefinition' \
             --output json)
 
-          # 2️⃣ Update container image and set executionRoleArn
-          NEW_TASK_DEF=$(echo $TASK_DEF_JSON | jq --arg IMAGE "$IMAGE_URI" --arg EXEC_ROLE "$EXECUTION_ROLE_ARN" \
-            '.containerDefinitions[0].image = $IMAGE | .executionRoleArn = $EXEC_ROLE | {family: .family, containerDefinitions: .containerDefinitions, executionRoleArn: .executionRoleArn, networkMode: .networkMode, requiresCompatibilities: .requiresCompatibilities, cpu: .cpu, memory: .memory}')
+          NEW_TASK_DEF=$(echo $TASK_DEF_JSON | jq --arg IMAGE "$IMAGE_URI" \
+            '.containerDefinitions[0].image = $IMAGE |
+             {family: .family,
+              containerDefinitions: .containerDefinitions,
+              executionRoleArn: .executionRoleArn,
+              networkMode: .networkMode,
+              requiresCompatibilities: .requiresCompatibilities,
+              cpu: .cpu,
+              memory: .memory}')
 
-          echo $NEW_TASK_DEF > new-task-def.json
+          echo "$NEW_TASK_DEF" > new-task-def.json
 
-          # 3️⃣ Register new task definition revision and get the ARN
           NEW_TASK_DEF_ARN=$(aws ecs register-task-definition \
             --cli-input-json file://new-task-def.json \
             --region $AWS_REGION \
             --query 'taskDefinition.taskDefinitionArn' \
             --output text)
 
-          echo "Registered new task definition: $NEW_TASK_DEF_ARN"
-
-          # 4️⃣ Update ECS service to use the new task definition explicitly
           aws ecs update-service \
             --cluster $ECS_CLUSTER \
             --service $ECS_SERVICE \
             --task-definition $NEW_TASK_DEF_ARN \
             --force-new-deployment \
             --region $AWS_REGION
-
-          echo "ECS service updated successfully!"
